working bearer token for nifi container only

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "8443:8443"
     environment:
       - NIFI_WEB_HTTPS_PORT=8443
+      - NIFI_WEB_HTTPS_HOST=0.0.0.0 
     volumes:
       - ./data:/data
       - ./spark:/opt/nifi/spark
@@ -27,7 +28,7 @@ services:
   # --------------------------
   spark-master:
     image: apache/spark:3.5.6
-    container_name: spark-master
+    container_name: spark-master-nifi
     command: >
       /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
     environment:
@@ -47,7 +48,7 @@ services:
   # --------------------------
   spark-worker:
     image: apache/spark:3.5.6
-    container_name: spark-worker
+    container_name: spark-worker-nifi
     command: >
       /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
@@ -63,6 +64,47 @@ services:
     networks:
       - default
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus-nifi
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data-nifi:/prometheus
+    ports:
+      - "9090:9090"
+    networks:
+      - default
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana-nifi
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana-storage-nifi:/var/lib/grafana
+    networks:
+      - default
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter-nifi
+    ports:
+      - "9100:9100"
+    networks:
+      - default
+
+  statsd-exporter:
+    image: prom/statsd-exporter
+    container_name: statsd-exporter-nifi
+    ports:
+      - "9102:9102"
+      - "9125:9125/udp"
+
 networks:
   default:
     driver: bridge
+
+volumes:
+  postgres-db-volume:
+  grafana-storage-nifi:
+  prometheus-data-nifi:
